# faasnap-firecracker

./: Cargo.toml
src/userfaultfd/src/: builder.rs  lib.rs
src/vmm/src/: lib.rs  memory_snapshot.rs  persist.rs  pseudo_mm_restore.rs  pseudo_mm_support.rs
src/vmm/src/vmm_config/: snapshot.rs
tools/pseudo_mm_template_creator/: Cargo.toml  README.md
tools/pseudo_mm_template_creator/src/: main.rs
vm-memory/: 0001-bytes-avoid-torn-writes-with-memcpy.patch  Cargo.toml  check_aligned.patch
vm-memory/src/: mmap_unix.rs
