[package]
name = "pseudo_mm_template_creator"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = ">=1.0.27", features = ["derive"] }
serde_json = ">=1.0.9"
clap = "2.33"
vmm = { path = "../../src/vmm" }
vm-memory = { version = ">=0.2.0", features = ["backend-mmap"] }
snapshot = { path = "../../src/snapshot" }
versionize = { version = "0.1.1" }
libc = ">=0.2.39"
